Jv feat: documentação
