# swagger.json
@@ -70,7 +70,7 @@
             "post": {
             "summary": "Login no sistema",
             "description": "Esta rota é responsável pela autenticação e login do usuário",
-            "tags": ["Login"],
+            "tags": ["Candidato/usuário/funcionário"],
             "requestBody": {
                 "content": {
                     "application/json": {
@@ -115,7 +115,7 @@
             "get": {
             "summary": "Dados do usuário logado",
             "description": "Esta rota fornece ao usuário logado seus dados. ATENÇÃO: é necessário autenticação para acesso a essa rota. Nível de acesso: 0 (este é o acesso básico permitido ao candidato assim que ele se cadastra no sistema, e não possui nenhum nível de acesso as demais funcionalidades restritas do sistema. Para acessar demais funcionalidades, apenas se ele for contratado pela empresa, e receber seu nível de acesso conforme a política da empresa em relação ao cargo que o candidato irá ocupar)",
-            "tags": ["Cadastro de PcD"],
+            "tags": ["Candidato/usuário/funcionário"],
             "security": [{"bearerAuth": []}],
             "responses": {
                 "200": {
@@ -190,6 +190,301 @@
                 }
             }
         }
+        },
+
+        "/deficiencia_candidato/{id}": {
+            "get": {
+                "summary": "Listagem das deficiências de um candidato",
+                "description": "Esta rota é responsável por listar as deficiências de um candidato",
+                "tags": ["Cadastro de PcD"],
+                "security": [{"bearerAuth": []}],
+                "parameters": [
+                  {  
+                    "name":"id",
+                    "in":"path",
+                    "description":"Informar o id do candidato a ser consultado",
+                    "required":true,
+                    "type":"string"
+                  }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "type": "object",
+                                        "$ref": "#/components/schemas/DeficienciaCandidato"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Token não informado"
+                    },
+                    "401": {
+                        "description": "Token inválido"
+                    },
+                    "403": {
+                        "description": "Este usuário não tem permissão para acessar essa rota (mínimo nível de acesso 2)"
+                    },
+                    "500": {
+                        "description": "Ocorreu um erro interno no servidor"
+                    }
+                }
+            }
+        },
+
+        "/dashboard": {
+            "get": {
+                "summary": "Filtro de pessoas por etnia, identidade de gênero, e/ou orientação sexual",
+                "description": "Esta rota fornece ao usuário logado com pelo menos nível de acesso 2, a possibilidade de realizar a consulta ao sistema informando os parâmetros que deseja consultar. Os parâmetros possíveis são: etnia (amarela, branca, preta, parda, indígena, prefiro não informar), identidade_genero (mulher cis, homem cis, mulher trans, homem trans, não-binário, neutro, agênero) e orientacao_sexual (heterossexual, homossexual, bissexual, assexual, pansexual, outro). Esses parâmetros podem ser utilizados individualmente, ou em conjunto para realizar as consultas, como por exemplo: todos os registros de pessoas com orientação sexual = homossexual (que vai resultar em uma lista de todos os candidatos que possuem essa orientação sexual, ou então pode também acrescentar o parâmetro de etnia = preta, que nesse caso, vai trazer a lista com todos os homossexuais de etnia preta, podendo ainda acrescentar o parâmetro de identidade de gênero = mulher trans, assim trazendo todos os registros de mulheres trans, homossexuais da etnia preta",
+                "tags": ["Dashboard"],
+                "security": [{"bearerAuth": []}],
+                "parameters":[  
+               {  
+                  "name":"etnia",
+                  "in":"query",
+                  "description":"Informar o tipo de etnia que deseja. ex: [amarela, branca, preta, parda, indígena, prefiro não informar]",
+                  "required":false,
+                  "type":"string"
+               },
+               {  
+                  "name":"identidade_genero",
+                  "in":"query",
+                  "description":"Informe a identidade de gênero que deseja. ex: [mulher cis, homem cis, mulher trans, homem trans, não-binário, neutro, agênero]",
+                  "required":false,
+                  "type":"string"
+               },
+               {  
+                  "name":"orientacao_sexual",
+                  "in":"query",
+                  "description":"Informe a orientação sexual que deseja. ex: [heterossexual, homossexual, bissexual, assexual, pansexual, outro]",
+                  "required":false,
+                  "type":"string"
+               }
+            ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "type": "object",
+                                        "$ref": "#/components/schemas/Candidato"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Token não informado"
+                    },
+                    "401": {
+                        "description": "Token inválido"
+                    },
+                    "403": {
+                        "description": "Este usuário não tem permissão para acessar essa rota (mínimo nível de acesso 2)"
+                    },
+                    "500": {
+                        "description": "Ocorreu um erro interno no servidor"
+                    }
+                }
+            }
+        },
+
+
+        "/contratar/{id}": {
+            "put": {
+                "summary": "Contratação de candidatos",
+                "description": "Rota responsável pela contratação de candidatos. Nessa rota o usuário precisa estar logado, e possuir o nível de acesso 4 ou maior, pois trata-se da rota responsável pela contratação de novos funcionários da empresa. Nesta rota ele precisa basicamente informar a data de contração do funcionário, é necessário informar a data da contratação, e o nível de acesso que o usuário contratado vai ter. Como regra de negócio, colocamos que a pessoa que está contratando não pode fornecer um nível de acesso maior ou igual ao que ela já possui (ex: como ela precisa ser ao menos nível 4 para acessar essa rota, ela poderá contratar funcionários com no máximo nível 3). Além disso, é necessário informar como parâmetro na URL o id do candidato a ser contratado.",
+                "tags": ["Funções administrativas"],
+                "security": [{"bearerAuth": []}],
+                "parameters":[  
+               {  
+                  "name":"id",
+                  "in":"path",
+                  "description":"Informar o id do candidato a ser contratado",
+                  "required":true,
+                  "type":"string"
+               }
+            ],
+            "requestBody": {
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "$ref": "#/components/schemas/Contratacao"
+                        },
+                        "examples": {
+                            "contratacao": {
+                                "value": {
+                                    "data_contratacao": "AAAA-MM-DD",
+                                    "nivel_acesso": "1"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "type": "object",
+                                        "$ref": "#/components/schemas/Contratacao"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Token não informado"
+                    },
+                    "401": {
+                        "description": "Token inválido"
+                    },
+                    "403": {
+                        "description": "Este usuário não tem permissão para acessar essa rota (mínimo nível de acesso 4)"
+                    },
+                    "404": {
+                        "description": "Candidato não encontrado"
+                    },
+                    "500": {
+                        "description": "Ocorreu um erro interno no servidor"
+                    }
+                }
+            }
+        },
+
+        "/desligar/{id}": {
+            "put": {
+                "summary": "Demissão/desligamento de funcionários",
+                "description": "Rota responsável pela demissão/desligamento de funcionários. Nessa rota o usuário precisa estar logado, e possuir o nível de acesso 4 ou maior, pois trata-se da rota responsável pelo desligamento de funcionários da empresa. Nesta rota ele precisa basicamente informar a data do desligamento do funcionário, mas não será possível desligar um funcionário com nível de acesso maior ou igual ao seu (ex: se o seu nível de acesso é 4, você só poderá desligar funcionários com nível de acesso até 3). Além disso, é necessário informar como parâmetro na URL o id do funcionário a ser desligado. Nesta função, o sistema irá retirar o acesso do funcionário a ser desligado, setando seu nível para 0, e a data da contratação para NULL, além disso, a data da última contratação será setada para o valor da data de contratação, assim teremos um registro dos ex funcionários da empresa",
+                "tags": ["Funções administrativas"],
+                "security": [{"bearerAuth": []}],
+                "parameters":[  
+               {  
+                  "name":"id",
+                  "in":"path",
+                  "description":"Informar o id do funcionário a ser desligado",
+                  "required":true,
+                  "type":"string"
+               }
+            ],
+            "requestBody": {
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "$ref": "#/components/schemas/Demissao"
+                        },
+                        "examples": {
+                            "contratacao": {
+                                "value": {
+                                    "data_demissao": "AAAA-MM-DD"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "type": "object",
+                                        "$ref": "#/components/schemas/Demissao"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Token não informado"
+                    },
+                    "401": {
+                        "description": "Token inválido"
+                    },
+                    "403": {
+                        "description": "Este usuário não tem permissão para acessar essa rota (mínimo nível de acesso 4)"
+                    },
+                    "404": {
+                        "description": "Funcionário não encontrado"
+                    },
+                    "500": {
+                        "description": "Ocorreu um erro interno no servidor"
+                    }
+                }
+            }
+        },
+
+        "/candidato/pcd": {
+            "get": {
+                "summary": "Listagem de pessoas PcD",
+                "description": "Esta rota fornece ao usuário logado com pelo menos nível de acesso 1, a possibilidade de realizar a consulta ao sistema das pessoas PcD cadastradas. A consulta será paginada com 20 registros por requisição, portanto deve-se informar a página que deseja consultar (se não informar, por padrão será a página 1). Além disso, pode-se informar também se você quer consultar apenas os funcionários da empresa, ou apenas os candidatos ainda não admitidos, e caso não informe, o sistema trará tanto os candidatos quanto os funcionários",
+                "tags": ["Dashboard"],
+                "security": [{"bearerAuth": []}],
+                "parameters": [
+                    {
+                        "name":"pagina",
+                        "in":"query",
+                        "description":"Informe a página que deseja consultar (por padrão, será a página 1)",
+                        "required":false,
+                        "type":"string"
+                    },
+                    {
+                        "name":"funcionario",
+                        "in":"query",
+                        "description":"Informe true para vir apenas os funcionários, false para vir apenas os candidatos, ou deixe em branco para vir todos",
+                        "required":false,
+                        "type":"string"
+                    }
+                ],
+
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "type": "object",
+                                        "$ref": "#/components/schemas/ListagemPcd"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Token não informado"
+                    },
+                    "401": {
+                        "description": "Token inválido"
+                    },
+                    "403": {
+                        "description": "Este usuário não tem permissão para acessar essa rota (mínimo nível de acesso 4)"
+                    },
+                    "404": {
+                        "description": "Funcionário não encontrado"
+                    },
+                    "500": {
+                        "description": "Ocorreu um erro interno no servidor"
+                    }
+                }
+            }
         }
     },
     "components": {
@@ -294,6 +589,65 @@
                     },
                     "cid": {
                         "type": "string"
+                    }
+                }
+            },
+
+
+            "Contratacao": {
+                "type": "object",
+                "properties": {
+                    "data_contratacao": {
+                        "type": "string"
+                    },
+                    "nivel_acesso": {
+                        "type": "string"
+                    }
+                }
+            },
+
+            "Demissao": {
+                "type": "object",
+                "properties": {
+                    "data_demissao": {
+                        "type": "string"
+                    }
+                }
+            },
+
+            "DeficienciaCandidato": {
+                "type": "object",
+                "properties": {
+                    "candidato": {
+                        "type": "string"
+                    },
+                    "deficiencias": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/PcD"
+                        }
+                    }
+                }
+            },
+
+            "ListagemPcd": {
+                "type": "object",
+                "properties": {
+                    "totRegistrosConsulta": {
+                        "type": "number"
+                    },
+                    "tipoConsulta": {
+                        "type": "string"
+                    },
+                    "totRegistrosEnviadosNaPagina": {
+                        "type": "number"
+                    },
+                    "candidatos": {
+                        "type": "array",
+                        "items": {
+                            "type": "object",
+                            "$ref": "#/components/schemas/Candidato"
+                        }
                     }
                 }
             }
